<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labelname"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="姓名："
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textname"
            android:layout_width="75dp"
             android:layout_height="20dp"
            android:hint="请输入"
            android:singleLine="true"
            android:textSize="15sp" />

        <TextView
             android:id="@+id/labelsex"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginLeft="7dp"
             android:text="性别："
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

          <TextView
             android:id="@+id/textsex"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_weight="1"
             android:hint="男/女"
             android:singleLine="true"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/labelminzu"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginLeft="5dp"
             android:text="民族："
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/textminzu"
             android:layout_width="40dp"
             android:layout_height="20dp"
             android:layout_weight="1"
             android:hint="汉族"
             android:singleLine="true"
             android:textSize="15sp" />
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/labeborn"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:text="出生："
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/textyear"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:hint="xxxx"
             android:singleLine="true"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/labelmouth"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginLeft="0dp"
             android:text="年"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/textmouth"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:hint="xx"
             android:singleLine="true"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/labelmouths"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginLeft="0dp"
             android:text="月"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/textday"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:hint="xx"
             android:singleLine="true"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/labelday"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginLeft="0dp"
             android:text="日"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="38sp"
         android:layout_weight="0.5"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/labeladdr"
             android:layout_width="wrap_content"
             android:layout_height="38sp"
             android:text="住址："
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/textaddr"
             android:layout_width="match_parent"
             android:layout_height="38sp"
             android:layout_weight="1"
             android:hint="请输入                   \n"
             android:inputType="textMultiLine"
             android:singleLine="true"
             android:textSize="15sp" />
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/labelsfz"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:text="身份证："
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/textsfz"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_weight="1"
             android:hint="请输入                                                     "
             android:singleLine="true"
             android:textSize="15sp" />
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/labelqianfa"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:text="签发机关："
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/textqianfa"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_weight="1"
             android:hint="请输入                                                "
             android:singleLine="true"
             android:textSize="15sp" />
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/labelqixian"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:text="有效期限："
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="15sp" />

         <TextView
             android:id="@+id/textqixian"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_weight="1"
             android:hint="2016.01.01-2026.01.01"
             android:singleLine="true"
             android:textSize="15sp" />
     </LinearLayout>
   
     <TextView
        android:id="@+id/tv_content"
        android:layout_width="200dp"
        android:layout_height="22dp"

        android:text="@string/StrNull" 
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/imageViewPortrait"
        android:layout_width="168dip"
        android:layout_height="165dip"
        android:layout_centerHorizontal="true"
        android:layout_weight="0.72"
        android:contentDescription="@string/portrait"
        android:src="@null" />

    <ToggleButton
        android:background="#DEB887"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_auto"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="0.16"

        android:textOff="@string/Togauto_off"          
        android:textOn="@string/Togauto_on" />
    
    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <Button
            android:id="@+id/button_find"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:text="@string/BtnStr_Find" />

        <Button
            android:id="@+id/button_choose"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:text="@string/BtnStr_Choose" />

        <Button
            android:id="@+id/button_read"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.18"
            android:text="@string/BtnStr_Read" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <ToggleButton

            android:id="@+id/toggleButton_power"
            android:background="#DEB887"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:textOn="@string/Togopen_on"          
            android:textOff="@string/Togopen_off"/>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:text="@string/BtnStr_Send" />
    </LinearLayout>

</LinearLayout>